# Logger-CPP

./: .gitignore  CMakeLists.txt  Makefile  uml.mmd
inc/: Logger.hpp
inc/strats/: ErrorStrategy.hpp  FileStrategy.hpp
src/: Logger.cpp  Logger.h  Logger.hpp  date.h  main.cpp
src/date/: tz.h
src/logger/: Logger.cpp
src/logger/strats/: ConsoleStrategy.cpp  ErrorStrategy.cpp  FileStrategy.cpp
src/strategies/: ConsoleStrategy.cpp  ConsoleStrategy.hpp  LogStrategy.cpp  LogStrategy.hpp
src/strats/: ConsoleStrategy.cpp  ConsoleStrategy.hpp  ErrorStrategy.cpp  FileStrategy.cpp  LogStrategy.hpp
